feat(API): add user disabled_reason and dedicated endpoint (#150)
* feat: added disabled section in user model
* feat: added disabled controller
* feat: added Disabled Reason
* fix(API): prevent users from being disabled outside of dedicated endpoint
---------
